<resources>
    <string name="app_name">Pets Shelter</string>
    <string name="about">The Dobermann, or Doberman Pinscher in the United States and Canada, is a medium-large breed of domestic dog that was originally developed around 1890 by Karl Friedrich Louis Dobermann, a tax collector from Germany. The Dobermann has a long muzzle. It stands on its pads and is not usually heavy-footed.</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_breed">Pet Breed</string>
    <string name="pet_gif">Pet Gif</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="about_label">About</string>
    <string name="share">Share</string>
    <string name="pet_age">Pet Age</string>
    <string name="name">Name</string>
    <string name="gender_icon">Gender Icon</string>
    <string name="loading">Please Wait…</string>
    <string name="close">Close</string>
    <string name="date">Date</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="share_a_pet">Share A Pet</string>
    <string name="age_in_months">Age In Months</string>
    <string name="login">Login</string>
    <string name="welcome_please_login_to_your_account">Welcome, Please Login To Your Account</string>
    <string name="welcome_msg">Hello, Sign In To Your Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="pet_icon">pet icon</string>
    <string name="or">Or</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="google_icon">google icon</string>
    <string name="don_t_have_an_account">Don\'t Have An Account? Sign Up</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook_app_id">251984249746021</string>
    <string name="fb_login_protocol_scheme">fb251984249746021</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="address">Address</string>
    <string name="owner">Owner</string>
</resources>