<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.home_activity.fragments.ShareFragment">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/close_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/close"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground" />

                    <TextView
                        android:id="@+id/share_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_8sdp"
                        tools:ignore="RelativeOverlap"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/pet_gif"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/pet_gif"
                android:src="@drawable/ic_petplaceholder"
                android:layout_marginTop="@dimen/_8sdp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp">

                <EditText
                    android:id="@+id/pet_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:hint="@string/pet_name"
                    android:singleLine="true"
                    app:met_floatingLabel="normal"
                    android:background="@drawable/edit_text_rounded_corners"
                    android:padding="@dimen/_8sdp"
                    android:inputType="text"
                    android:importantForAutofill="no" />


                <EditText
                    android:id="@+id/breed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:hint="@string/breed"
                    app:met_floatingLabel="normal"
                    android:background="@drawable/edit_text_rounded_corners"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:inputType="text"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_12sdp">

                <EditText
                    android:id="@+id/dob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:hint="@string/date_of_birth"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@drawable/edit_text_rounded_corners"
                    android:padding="@dimen/_8sdp"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/age_in_months"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:inputType="number"
                    android:background="@drawable/edit_text_rounded_corners"
                    android:padding="@dimen/_8sdp"
                    android:importantForAutofill="no" />

            </LinearLayout>


            <EditText
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about_label"
                android:inputType="textMultiLine"
                app:met_floatingLabel="normal"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/edit_text_rounded_corners"
                android:padding="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/gender"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <RadioGroup
                android:id="@+id/rg"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/female_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>


        </LinearLayout>

    </ScrollView>


</layout>