<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ui.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:contentDescription="@string/logo"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/welcome_msg"
                    android:textColor="#696969"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_6sdp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="12dp"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        android:singleLine="true" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_6sdp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">


                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/button_forgot_password"
                    style="@style/TextyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button_signin"
                    style="@style/Button1"
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/sign_in" />

                <LinearLayout
                    android:id="@+id/social_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:text="@string/or"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/facebook_sign_in_button"
                            android:layout_width="@dimen/_200sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"/>

                        <com.google.android.gms.common.SignInButton
                            android:id="@+id/google_sign_in_button"
                            android:layout_width="@dimen/_210sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_4sdp"  />

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/button_signup"
                    style="@style/TextyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/_8sdp"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</layout>
