<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_16sdp">

        <RelativeLayout
            android:id="@+id/signup_image_layout"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/person_placeholdr" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="1dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                app:srcCompat="@drawable/ic_plus"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            android:layout_margin="@dimen/_6sdp"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:minWidth="320dp"
                android:minHeight="45dp"
                android:singleLine="true" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:minWidth="320dp"
                android:minHeight="45dp"
                android:singleLine="true" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="12dp"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:minWidth="320dp"
                android:minHeight="45dp"
                android:singleLine="true"
                android:inputType="phone"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:minWidth="320dp"
                android:minHeight="45dp"
                android:importantForAutofill="no" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/sign_up_btn"
            style="@style/Button1"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up" />

    </LinearLayout>


</layout>